--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,11 @@ body {
   background-color: #f8f9fa;
   color: #333;
 }
-
+header {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 900;
+}
 /* Filter Section */
 .filter-section {
   text-align: center;
