--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,200;1,300;1,400;1,500;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -9,6 +10,7 @@ header {
   text-align: center;
   font-size: 30px;
   font-weight: 900;
+  font-family: "Inter", sans-serif;
 }
 /* Filter Section */
 .filter-section {
