--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,25 @@
+@import url("https://fonts.googleapis.com/css2?family=Boldonse&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,200;1,300;1,400;1,500;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: bisque;
+  background-color: #f5f5f5;
   color: #333;
 }
+
 header {
+  background: linear-gradient(to right, pink, skyblue);
+  color: white;
+  padding: 20px;
   text-align: center;
-  font-size: 30px;
-  font-weight: 900;
-  font-family: "Inter", sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  box-shadow: 0 0 10px pink;
+}
+
+header h3 {
+  font-family: "Boldonse", system-ui;
 }
 /* Filter Section */
 .filter-section {
