--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Boldonse&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Boldonse&family=Bungee+Tint&display=swap");
+
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,200;1,300;1,400;1,500;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 body {
   font-family: Arial, sans-serif;
@@ -10,12 +13,13 @@ body {
 
 header {
   background: linear-gradient(to right, pink, skyblue);
-  color: white;
+  color: rgb(85, 59, 59);
   padding: 20px;
   text-align: center;
   font-size: 24px;
   font-weight: bold;
   box-shadow: 0 0 10px pink;
+  font-family: "Boldonse", system-ui;
 }
 
 header h3 {
